@@ -101,6 +101,7 @@ Views 6.x-3.x-dev
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
     o #699426 by dereine: Tests pluggable pagers.
     o #679714 by dereine: test: groupby sum. avg, min, max.
+    o #706464 by dereine: Test full(normal) pager plugin.
 
 Views 6.x-3.0-alpha1
   Bugs fixed
